--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </style>
 </head>
 <body>
-    <label for="map-filter">マップ検索:</label>
+    <!--<label for="map-filter">マップ検索:</label>
     <select id="map-filter">
         <option value="">すべて</option>
         <option value="ヘイブン">ヘイブン</option>
@@ -53,7 +53,7 @@
         <option value="ロータス">ロータス</option>
         <option value="アセント">アセント</option>
     </select>
-    
+    -->
     <table id="data-table" class="display">
         <thead>
             <tr>
