--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>データテーブル</title>
+    <title>VALORANT CHALENGERS JAPAN 2025 SPLIT1 - Character Data Set</title>
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
@@ -33,6 +33,11 @@
         .atk, .def {
             color: white !important;
         }
+
+        tfoot {
+            margin-top: 20px;
+        }
+        
         td[data-role="duelist"] { background-color: #FFD1DC; } /* ピンク */
         td[data-role="controller"] { background-color: #D1C4E9; } /* 紫 */
         td[data-role="sentinel"] { background-color: #FFECB3; } /* 黄色 */
