--- a/index.html
+++ b/index.html
@@ -9,93 +9,84 @@
     <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
     
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 10px;
-        }
-        .table-container {
-            width: 100%;
-            overflow-x: auto; /* スマホで横スクロール可能にする */
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            min-width: 1000px; /* スマホで折りたたまずスクロール */
-        }
-        th, td {
-            padding: 8px;
-            text-align: center;
-            border: 1px solid #ddd;
-        }
-        th {
-            background-color: #f4f4f4;
-        }
-        .atk {
-            background-color: pink !important;
-            color: white !important;
-        }
-        .def {
-            background-color: skyblue !important;
-            color: white !important;
-        }
-        tfoot td {
-            font-weight: bold;
-        }
+        body { font-family: Arial, sans-serif; padding: 10px; }
+        .table-container { width: 100%; overflow-x: auto; }
+        table { width: 100%; border-collapse: collapse; min-width: 1000px; }
+        th, td { padding: 8px; text-align: center; border: 1px solid #ddd; }
+        th { background-color: #f4f4f4; }
+        .atk { background-color: pink !important; color: white !important; }
+        .def { background-color: skyblue !important; color: white !important; }
+
+        .atk-win { background-color: pink !important; color:white !important;}
+        .def-win { background-color: skyblue !important; color:white !important; }
+        tfoot td {text-align: center !important;}
+        /* 役割の色 */
         td[data-role="duelist"] { background-color: #FFD1DC; } /* ピンク */
         td[data-role="controller"] { background-color: #D1C4E9; } /* 紫 */
         td[data-role="sentinel"] { background-color: #FFECB3; } /* 黄色 */
         td[data-role="initiator"] { background-color: #C8E6C9; } /* 緑 */
 
-        /* スマホ用調整 */
         @media (max-width: 768px) {
-            table {
-                font-size: 12px;
-            }
-            th, td {
-                padding: 6px;
-            }
+            table { font-size: 12px; }
+            th, td { padding: 6px; }
         }
+
+        /* フィルター用 */
+        .filter-container { margin-bottom: 10px; }
     </style>
 </head>
 <body>
+
+    <!-- マップ検索用フィルター -->
+    <div class="filter-container">
+        <label for="map-filter">マップ検索:</label>
+        <select id="map-filter">
+            <option value="all">すべて</option>
+            <option value="ロール" style="display:none;">ロール</option>
+            <option value="ヘイブン">ヘイブン</option>
+            <option value="バインド">バインド</option>
+            <option value="スプリット">スプリット</option>
+            <option value="アビス">アビス</option>
+            <option value="パール">パール</option>
+            <option value="フラクチャー">フラクチャー</option>
+            <option value="サンセット">サンセット</option>
+            <option value="ロータス">ロータス</option>
+            <option value="アセント">アセント</option>
+            <option value="AllMap">All Map</option>
+        </select>
+    </div>
 
     <div class="table-container">
         <table id="data-table" class="display">
             <thead>
                 <tr>
-                    <th>Agent</th>
-                    <th>ロール</th>
-                    <th>ヘイブン</th>
-                    <th>バインド</th>
-                    <th>スプリット</th>
-                    <th>アビス</th>
-                    <th>パール</th>
-                    <th>フラクチャー</th>
-                    <th>サンセット</th>
-                    <th>ロータス</th>
-                    <th>アセント</th>
-                    <th>All Map</th>
+                    <th class="col-agent">Agent</th>
+                    <th class="col-ロール">ロール</th>
+                    <th class="col-ヘイブン">ヘイブン</th>
+                    <th class="col-バインド">バインド</th>
+                    <th class="col-スプリット">スプリット</th>
+                    <th class="col-アビス">アビス</th>
+                    <th class="col-パール">パール</th>
+                    <th class="col-フラクチャー">フラクチャー</th>
+                    <th class="col-サンセット">サンセット</th>
+                    <th class="col-ロータス">ロータス</th>
+                    <th class="col-アセント">アセント</th>
+                    <th class="col-AllMap">All Map</th>
                 </tr>
             </thead>
             <tbody></tbody>
             <tfoot>
-                <tr>
-                    <td></td>
-                    <td></td><td></td><td></td><td></td><td></td><td></td>
-                    <td></td><td></td><td></td><td></td><td></td>
-                </tr>
-                <tr>
+                <tr class="atk-win">
                     <td class="atk">ATK WIN</td>
                     <td></td><td>51%</td><td>50%</td><td>46%</td><td>48%</td><td>59%</td>
                     <td>56%</td><td>47%</td><td>55%</td><td>52%</td><td>59%</td>
                 </tr>
-                <tr>
+                <tr class="def-win">
                     <td class="def">DEF WIN</td>
                     <td></td><td>49%</td><td>50%</td><td>54%</td><td>52%</td><td>41%</td>
                     <td>44%</td><td>53%</td><td>45%</td><td>48%</td><td>41%</td>
                 </tr>
-                <tr>
+                <tr class="map-count">
                     <td class="map">MAP COUNT</td>
                     <td></td><td>135</td><td>35</td><td>21</td><td>17</td><td>16</td>
                     <td>14</td><td>10</td><td>9</td><td>8</td><td>5</td>
@@ -106,11 +97,16 @@
 
     <script>
         $(document).ready(function() {
+            $.extend( $.fn.dataTable.defaults, { 
+                language: {
+                    url: "http://cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Japanese.json"
+                } 
+            }); 
             $.get("2025chara.csv", function(data) {
                 let rows = data.split("\n").map(line => line.split(","));
                 let tbody = "";
                 rows.forEach((row, index) => {
-                    if (index === 0 || row.length < 10) return; // スキップ
+                    if (index === 0 || row.length < 10) return;
                     let role = row[1].trim();
                     tbody += `<tr>
                         <td data-role="${role}">${row[0]}</td>
@@ -129,11 +125,32 @@
                 });
                 $("#data-table tbody").html(tbody);
 
-                $("#data-table").DataTable({
-                    responsive: false,  // **折りたたみ無効**
-                    paging: false,      // **ページネーション無効**
-                    searching: false,   // **検索機能無効**
-                    info: false         // **情報表示なし**
+                let table = $("#data-table").DataTable({
+                    responsive: true,
+                    lengthChange: true,
+                    paging: false,
+                    searching: true,
+                    info: false
+                });
+
+                $("#map-filter").on("change", function() {
+                    let selectedMap = $(this).val();
+
+                    // まず全ての列を非表示
+                    $("#data-table th, #data-table td").hide();
+
+                    if (selectedMap === "all") {
+                        // すべて表示
+                        $("#data-table th, #data-table td").show();
+                    } else {
+                        // エージェント名と選択したマップの列を表示
+                        $(".col-agent, .col-" + selectedMap).show();
+                        $("#data-table tbody td:nth-child(1), #data-table tbody td:nth-child(" + ($("#map-filter option:selected").index() + 1) + ")").show();
+
+                        // フッターは常に表示
+                        $("tfoot td").show();
+                    }
+                    
                 });
             });
         });
