--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <thead>
                 <tr>
                     <th class="col-agent">Agent</th>
-                    <th class="col-ロール">ロール</th>
+                    <th class="col-ロール" style="display:none;">ロール</th>
                     <th class="col-ヘイブン">ヘイブン</th>
                     <th class="col-バインド">バインド</th>
                     <th class="col-スプリット">スプリット</th>
